--- a/examples/multiple/index.html
+++ b/examples/multiple/index.html
@@ -17,10 +17,10 @@
 <html>
   <head>
     <title>Video.js Test</title>
-    <link href="//vjs.zencdn.net/5.3/video-js.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../third_party/videojs-ads/videojs.ads.css" />
-    <link rel="stylesheet" href="../../src/videojs.ima.css" />
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../../node_modules/video.js/dist/video-js.min.css">
+    <link rel="stylesheet" href="../../node_modules/videojs-contrib-ads/dist/videojs.ads.css" />
+    <link rel="stylesheet" href="../../dist/videojs.ima.css" />
   </head>
 
   <body>
@@ -43,11 +43,10 @@
       </video>
       <button onclick="pause('content_video1');">Pause Ad</button>
     </div>
-    
-    <script src="//vjs.zencdn.net/5.3/video.js"></script>
     <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-    <script src="../../third_party/videojs-ads/videojs.ads.js"></script>
-    <script src="../../src/videojs.ima.js"></script>
+    <script src="../../node_modules/video.js/dist/video.min.js"></script>
+    <script src="../../node_modules/videojs-contrib-ads/dist/videojs.ads.min.js"></script>
+    <script src="../../dist/videojs.ima.js"></script>
     <script src="ads.js"></script>
   </body>
 </html>
