--- a/examples/playlist/index.html
+++ b/examples/playlist/index.html
@@ -16,10 +16,10 @@
 
 <html>
   <head>
-    <link href="//vjs.zencdn.net/5.3/video-js.min.css" rel="stylesheet">
-    <link href="../style.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../third_party/videojs-ads/videojs.ads.css" />
-    <link rel="stylesheet" href="../../src/videojs.ima.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../../node_modules/video.js/dist/video-js.min.css">
+    <link rel="stylesheet" href="../../node_modules/videojs-contrib-ads/dist/videojs.ads.css" />
+    <link rel="stylesheet" href="../../dist/videojs.ima.css" />
 
     <!-- GPT Companion Code -->
     <!-- Initialize the tagging library -->
@@ -94,10 +94,10 @@
 
       <footer>Copyright (C) 2013 Google Inc.</footer>
     </div>
-    <script src="//vjs.zencdn.net/5.3/video.min.js"></script>
     <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-    <script src="../../third_party/videojs-ads/videojs.ads.js"></script>
-    <script src="../../src/videojs.ima.js"></script>
+    <script src="../../node_modules/video.js/dist/video.min.js"></script>
+    <script src="../../node_modules/videojs-contrib-ads/dist/videojs.ads.min.js"></script>
+    <script src="../../dist/videojs.ima.js"></script>
     <script src="ads.js"></script>
     <script type="text/javascript">
       var ads = new Ads();
